# Rust-Goniometry

./: Cargo.toml  README.md
src/: goniometry.rs  lib.rs  main.rs
src/goniometry/: functions.rs  metrics.rs
